# captici-adapter

./: Cargo.toml  Dockerfile  LICENSE  build-tiny.sh
src/: envs.rs  main.rs  rabbitmq.rs  structs.rs  test_executer.rs  test_executor.rs
src/adapters/: dummy.rs
src/test_executer/: dummy.rs  mod.rs  structs.rs
