[package]
name = "test-adapter"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "*"
simple_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
lto = true